--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/TalZohar/Web-App#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.2",
+    "create-react-app": "^5.0.1",
     "express": "^4.17.3",
-    "socket.io": "^4.4.1"
+    "react-countdown-circle-timer": "^3.0.9",
+    "socket.io": "^4.4.1",
+    "tar": "^6.1.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
