--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/TalZohar/Web-App#readme",
   "dependencies": {
     "babel-preset-react-app": "^3.1.2",
+    "bootstrap": "^5.2.0",
     "create-react-app": "^5.0.1",
     "express": "^4.17.3",
     "react-countdown-circle-timer": "^3.0.9",
